src/objects/School_temp__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Students__c</fullName>
        <label>Student_temp</label>
        <referenceTo>Student_temp__c</referenceTo>
        <relationshipLabel>School_temps</relationshipLabel>
        <relationshipName>School_temps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <label>contact</label>
        <type>Phone</type>
    </fields>
    <label>School_temp</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>School_temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>School_temps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>